@@ -22,6 +22,10 @@
 
 	* Makefile.in.in: Upgrade to gettext-0.15.
 
+2007-01-17  gettextize  <bug-gnu-gettext@gnu.org>
+
+	* Makefile.in.in: Upgrade to gettext-0.15.
+
 2007-01-12  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.in.in: Upgrade to gettext-0.15.
